--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Poppins', sans-serif;
-            /* Maroon Theme */
             background: linear-gradient(135deg, #4a0404 0%, #800000 50%, #2a0000 100%);
             min-height: 100vh;
             overflow-x: hidden;
             position: relative;
         }
 
-        /* Falling Stars Animation */
+        /* Falling Stars Animation - Increased stars */
         .night { position: fixed; width: 100%; height: 100%; transform: rotateZ(45deg); z-index: 1; pointer-events: none; }
         .shooting_star {
             position: absolute; height: 2px;
@@ -27,10 +26,16 @@
         }
         @keyframes tail { 0% { width: 0; } 30% { width: 100px; } 100% { width: 0; } }
         @keyframes shooting { 0% { transform: translateX(0); } 100% { transform: translateX(300px); } }
+        
+        /* Stars with different positions and delays */
         .shooting_star:nth-child(1) { top: 10%; left: 10%; animation-delay: 0s; }
-        .shooting_star:nth-child(2) { top: 30%; left: 50%; animation-delay: 1s; }
-        .shooting_star:nth-child(3) { top: 60%; left: 20%; animation-delay: 2s; }
-        .shooting_star:nth-child(4) { top: 80%; left: 70%; animation-delay: 1.5s; }
+        .shooting_star:nth-child(2) { top: 20%; left: 40%; animation-delay: 1.2s; }
+        .shooting_star:nth-child(3) { top: 40%; left: 20%; animation-delay: 2.5s; }
+        .shooting_star:nth-child(4) { top: 60%; left: 60%; animation-delay: 0.5s; }
+        .shooting_star:nth-child(5) { top: 80%; left: 30%; animation-delay: 3s; }
+        .shooting_star:nth-child(6) { top: 15%; left: 80%; animation-delay: 1.8s; }
+        .shooting_star:nth-child(7) { top: 50%; left: 90%; animation-delay: 2.2s; }
+        .shooting_star:nth-child(8) { top: 5%; left: 60%; animation-delay: 0.8s; }
 
         .container { max-width: 800px; margin: 0 auto; padding: 20px; position: relative; z-index: 2; }
         h1 {
@@ -43,7 +48,7 @@
             animation: glow 2s ease-in-out infinite alternate;
         }
         @keyframes glow { from { text-shadow: 0 0 20px rgba(255,215,0,0.6); } to { text-shadow: 0 0 30px rgba(255,215,0,0.9); } }
-        .subtitle { font-size: 1.4em; text-align: center; color: #ffcccc; margin-bottom: 40px; }
+        .subtitle { font-size: 1.2em; text-align: center; color: #ffcccc; margin-bottom: 40px; }
         .countdown { display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 20px; margin-bottom: 50px; }
         .count-item {
             background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border-radius: 20px;
@@ -65,10 +70,12 @@
     <div class="night">
         <div class="shooting_star"></div><div class="shooting_star"></div>
         <div class="shooting_star"></div><div class="shooting_star"></div>
+        <div class="shooting_star"></div><div class="shooting_star"></div>
+        <div class="shooting_star"></div><div class="shooting_star"></div>
     </div>
     <div class="container">
         <h1>Noor Fatima</h1>
-        <p class="subtitle">Your special day is coming! May Allah fill it with barakah and joy 🌸</p>
+        <p class="subtitle">Your special day is coming! May Allah fill it with barakah and joy 🥀</p>
         <div class="countdown" id="countdown">
             <div class="count-item"><div class="count-num" id="days">00</div><div class="count-label">Days</div></div>
             <div class="count-item"><div class="count-num" id="hours">00</div><div class="count-label">Hours</div></div>
@@ -76,7 +83,7 @@
             <div class="count-item"><div class="count-num" id="seconds">00</div><div class="count-label">Seconds</div></div>
         </div>
         <div class="wishes">
-            <h2><i class="fas fa-prayer-rug"></i> Duas & Well Wishes for You</h2>
+            <h2><i class="fas fa-prayer-rug"></i> For you Noor Fatima</h2>
             <ul class="wish-list">
                 <li class="wish-item">May Allah bless you with barakah, peace, and happiness today.</li>
                 <li class="wish-item">May Allah grant you peace, health, and heartfelt joy.</li>
@@ -88,15 +95,15 @@
                 <li class="wish-item">Live every moment with faith, love, and sincere gratitude without overthinking.</li>
                 <li class="wish-item">May Allah keep us together always.</li>
                 <li class="wish-item">Your life is a gift, Alhamdulillah for each moment.</li>
-                <li class="wish-item">May Allah keep you firm on the Straight Path..</li>
+                <li class="wish-item">May Allah keep you firm on the Straight Path.</li>
                 <li class="wish-item">Stay blessed with noor, iman, and endless barakah, Noor Fatima! 🌟</li>
             </ul>
         </div>
     </div>
     <script>
-        const birthday = new Date(2026, 0, 15);
+        const birthday = new Date(2026, 0, 15).getTime();
         function update() {
-            const now = new Date();
+            const now = new Date().getTime();
             const diff = birthday - now;
             if (diff <= 0) {
                 document.getElementById('countdown').innerHTML = "<h2 style='grid-column: 1/-1; text-align:center; color:#ffd700;'>Happy Birthday Noor Fatima! 🎉</h2>";
@@ -107,4 +114,9 @@
             document.getElementById('minutes').innerText = Math.floor((diff / 1000 / 60) % 60).toString().padStart(2, '0');
             document.getElementById('seconds').innerText = Math.floor((diff / 1000) % 60).toString().padStart(2, '0');
         }
-        setInterval(update, 100
+        setInterval(update, 1000);
+        update();
+        document.querySelectorAll('.wish-item').forEach((el, i) => { el.style.animationDelay = `${0.1 * (i + 1)}s`; });
+    </script>
+</body>
+</html>
